--- a/.github/workflows/gitlab_deploy.yml
+++ b/.github/workflows/gitlab_deploy.yml
@@ -18,15 +18,12 @@ jobs:
 
     - name: Fetch from GitLab
       run: |
-        git remote add gitlab https://oauth2:${{ secrets.GITLAB_SECRET }}@code.ovgu.de/seidl/se24-exercise09.git
-        git fetch gitlab
-        git checkout -b gitlab-branch gitlab/main
-
-    - name: Push to GitHub
-      run: |
-        git checkout gh-pages
-        git pull gitlab develop
-        git push origin gh-pages
+        mkdir gitlab-project
+        cd gitlab-project
+        git init
+        git remote add origin https://oauth2:${{ secrets.GITLAB_SECRET }}@code.ovgu.de/seidl/se24-exercise09.git
+        git fetch origin
+        git checkout develop gitlab/develop
 
     - name: Set up Node.js
       uses: actions/setup-node@v2
@@ -34,7 +31,26 @@ jobs:
         node-version: '14'
 
     - name: Install dependencies
+      working-directory: gitlab-project
       run: npm ci
 
     - name: Build project
+      working-directory: gitlab-project
       run: npm run build --prod
+
+    - name: Move built files to GitHub repository
+      run: |
+        mv gitlab-repo/dist/GameTracker/* ./dist/
+
+    - name: Commit and push to gh-pages branch
+      env:
+        GIT_AUTHOR_NAME: GitHub Actions
+        GIT_AUTHOR_EMAIL: actions@github.com
+        GIT_COMMITTER_NAME: GitHub Actions
+        GIT_COMMITTER_EMAIL: actions@github.com
+      run: |
+        git config --global user.email "actions@github.com"
+        git config --global user.name "GitHub Actions"
+        git add dist
+        git commit -m "Deploy to GitHub Pages"
+        git push origin git subtree split --prefix dist main:gh-pages --force
