--- a/.github/workflows/gitlab_deploy.yml
+++ b/.github/workflows/gitlab_deploy.yml
@@ -32,7 +32,9 @@ jobs:
 
     - name: Install dependencies
       working-directory: gitlab-project/GameTracker
-      run: npm i @angular/cli@19.0.0
+      run: |
+        npm i @angular/cli@19.0.0
+        npm install
 
     - name: Build project
       working-directory: gitlab-project/GameTracker
