--- a/.github/workflows/gitlab_deploy.yml
+++ b/.github/workflows/gitlab_deploy.yml
@@ -28,18 +28,15 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '22'
-        cache: 'npm'
-        cache-dependency-path: package-lock.json
+        node-version: 22.11.0
 
     - name: Install dependencies
       working-directory: gitlab-project/GameTracker
-      run: |
-        npm i @angular/cli@19.0.0
+      run: npm install
 
     - name: Build project
       working-directory: gitlab-project/GameTracker
-      run: npm run build --prod
+      run: npm run build -- --prod
 
     - name: Move built files to GitHub repository
       run: |
