--- a/.github/workflows/gitlab_deploy.yml
+++ b/.github/workflows/gitlab_deploy.yml
@@ -36,7 +36,7 @@ jobs:
 
     - name: Build project
       working-directory: gitlab-project/GameTracker
-      run: npm run build -- --prod
+      run: npm run build --
 
     - name: Move built files to GitHub repository
       run: |
