--- a/.github/workflows/gitlab_deploy.yml
+++ b/.github/workflows/gitlab_deploy.yml
@@ -42,7 +42,7 @@ jobs:
       run: |
         mv gitlab-project/GameTracker/dist/* ./dist/
 
-    - name: Commit and push to gh-pages branch
+    - name: Add dist
       env:
         GIT_AUTHOR_NAME: GitHub Actions
         GIT_AUTHOR_EMAIL: actions@github.com
@@ -52,5 +52,7 @@ jobs:
         git config --global user.email "actions@github.com"
         git config --global user.name "GitHub Actions"
         git add dist
+
+    - name: Commit to gh-pages
         git commit -m "Deploy to GitHub Pages"
         git push origin git subtree split --prefix dist main:gh-pages --force
