--- a/.github/workflows/gitlab_deploy.yml
+++ b/.github/workflows/gitlab_deploy.yml
@@ -54,5 +54,6 @@ jobs:
         git add dist
 
     - name: Commit to gh-pages
+      run: |
         git commit -m "Deploy to GitHub Pages"
         git push origin git subtree split --prefix dist main:gh-pages --force
