--- a/.github/workflows/gitlab_deploy.yml
+++ b/.github/workflows/gitlab_deploy.yml
@@ -54,4 +54,4 @@ jobs:
         git add dist
         git checkout gh-pages
         git commit -m "Deploy to GitHub Pages"
-        git push origin `git subtree split --prefix dist main`:gh-pages --force
+        git push origin gh-pages
