--- a/.github/workflows/gitlab_deploy.yml
+++ b/.github/workflows/gitlab_deploy.yml
@@ -52,6 +52,7 @@ jobs:
       run: |
         git config --global user.email "actions@github.com"
         git config --global user.name "GitHub Actions"
+        git checkout gh-pages
         git add dist
         git commit -m "Deploy to GitHub Pages"
         git push origin gh-pages
