--- a/.github/workflows/gitlab_deploy.yml
+++ b/.github/workflows/gitlab_deploy.yml
@@ -52,7 +52,8 @@ jobs:
       run: |
         git config --global user.email "actions@github.com"
         git config --global user.name "GitHub Actions"
+        git fetch
         git checkout gh-pages
         git add dist
         git commit -m "Deploy to GitHub Pages"
-        git push origin gh-pages
+        git push origin gh-pages remove/gh-pages
