--- a/.github/workflows/gitlab_deploy.yml
+++ b/.github/workflows/gitlab_deploy.yml
@@ -52,8 +52,8 @@ jobs:
       run: |
         git config --global user.email "actions@github.com"
         git config --global user.name "GitHub Actions"
-        git fetch
-        git checkout gh-pages
+        git fetch --all
+        git checkout origin/gh-pages
         git add dist
         git commit -m "Deploy to GitHub Pages"
-        git push origin gh-pages remove/gh-pages
+        git push origin gh-pages origin/gh-pages
