--- a/.github/workflows/gitlab_deploy.yml
+++ b/.github/workflows/gitlab_deploy.yml
@@ -52,9 +52,7 @@ jobs:
       run: |
         git config --global user.email "actions@github.com"
         git config --global user.name "GitHub Actions"
-        git remote update
-        git fetch
-        git checkout origin/gh-pages
+        git checkout gh-pages
         git add dist
         git commit -m "Deploy to GitHub Pages"
-        git push origin gh-pages
+        git push origin
