--- a/.github/workflows/gitlab_deploy.yml
+++ b/.github/workflows/gitlab_deploy.yml
@@ -50,9 +50,9 @@ jobs:
         GIT_COMMITTER_NAME: GitHub Actions
         GIT_COMMITTER_EMAIL: actions@github.com
       run: |
+        git checkout origin/gh-pages
         git config --global user.email "actions@github.com"
         git config --global user.name "GitHub Actions"
-        git checkout gh-pages
         git add dist
         git commit -m "Deploy to GitHub Pages"
-        git push origin
+        git push origin gh-pages
