--- a/.github/workflows/gitlab_deploy.yml
+++ b/.github/workflows/gitlab_deploy.yml
@@ -56,7 +56,9 @@ jobs:
         git fetch origin gh-pages || git checkout --orphan gh-pages
         git checkout gh-pages
         git rm -rf .
+        git rm -f .gitmodules
         cp -r dist/* .
+        touch .nojekyll
         git add .
         git commit -m "Deploy to GitHub Pages"
         git push --force "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" gh-pages
