--- a/.github/workflows/gitlab_deploy.yml
+++ b/.github/workflows/gitlab_deploy.yml
@@ -43,23 +43,8 @@ jobs:
       working-directory: gitlab-project/GameTracker
       run: npm run build --
 
-    - name: Move built files to GitHub repository
-      run: |
-        mv gitlab-project/GameTracker/dist/* ./dist/
-        cd
-
-    - name: Add dist
-      env:
-        GIT_AUTHOR_NAME: GitHub Actions
-        GIT_AUTHOR_EMAIL: actions@github.com
-        GIT_COMMITTER_NAME: GitHub Actions
-        GIT_COMMITTER_EMAIL: actions@github.com
-      run: |
-        git fetch origin gh-pages || git checkout --orphan gh-pages
-        git checkout gh-pages
-        git rm -rf .
-        cp -r dist/* .
-        touch .nojekyll
-        git add .
-        git commit -m "Deploy to GitHub Pages"
-        git push --recurse-submodules=no --force "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" gh-pages
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./gitlab-project/GameTracker/dist
