--- a/.github/workflows/gitlab_deploy.yml
+++ b/.github/workflows/gitlab_deploy.yml
@@ -43,8 +43,18 @@ jobs:
       working-directory: gitlab-project/GameTracker
       run: npm run build --
 
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./gitlab-project/GameTracker/dist
+    - name: Deploy to gh-pages
+      env:
+        GIT_AUTHOR_NAME: GitHub Actions
+        GIT_AUTHOR_EMAIL: actions@github.com
+        GIT_COMMITTER_NAME: GitHub Actions
+        GIT_COMMITTER_EMAIL: actions@github.com
+      run: |
+        git fetch origin gh-pages || git checkout --orphan gh-pages
+        git checkout gh-pages
+        git rm -rf .
+        cp -r gitlab-project/GameTracker/dist/* .
+        touch .nojekyll
+        git add .
+        git commit -m "Deploy to GitHub Pages"
+        git push --force "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" gh-pages
