--- a/.github/workflows/gitlab_deploy.yml
+++ b/.github/workflows/gitlab_deploy.yml
@@ -61,9 +61,9 @@ jobs:
         git fetch origin gh-pages || git checkout --orphan gh-pages
         git checkout gh-pages
         git rm -rf .
+        git commit -AM "Remove all old files"
         touch .nojekyll
-        mv game-tracker ./
-        mv game-tracker/browser ./
+        mv game-tracker/browser .
         rm -r game-tracker
         git add .
         git commit -m "Deploy to GitHub Pages"
