--- a/.github/workflows/gitlab_deploy.yml
+++ b/.github/workflows/gitlab_deploy.yml
@@ -64,6 +64,7 @@ jobs:
         GIT_COMMITTER_EMAIL: actions@github.com
       run: |
         touch .nojekyll
+        mv docs/browser/* docs
         git add .
         git commit -m "Deploy to GitHub Pages"
         git push --force "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" gh-pages
