--- a/.github/workflows/gitlab_deploy.yml
+++ b/.github/workflows/gitlab_deploy.yml
@@ -39,9 +39,11 @@ jobs:
       with:
         node-version: 22.11.0
 
-    - name: Install dependencies
+    - name: Install Angular and dependencies
       working-directory: gitlab-project/GameTracker
-      run: npm install
+      run: |
+        npm install -g @angular/cli
+        npm ci
 
     - name: Build project
       working-directory: gitlab-project/GameTracker
