--- a/.github/workflows/gitlab_deploy.yml
+++ b/.github/workflows/gitlab_deploy.yml
@@ -33,6 +33,8 @@ jobs:
         git remote add origin https://oauth2:${{ secrets.GITLAB_SECRET }}@code.ovgu.de/seidl/se24-exercise09.git
         git fetch origin
         git checkout develop
+        mv ./gitlab-project ./
+        git init
 
     - name: Set up Node.js
       uses: actions/setup-node@v3
@@ -40,24 +42,15 @@ jobs:
         node-version: 22.11.0
 
     - name: Install Angular CLI and dependencies
-      working-directory: gitlab-project/GameTracker
+      working-directory: ./GameTracker
       run: |
         npm install -g @angular/cli
         npm ci
         ng add angular-cli-ghpages --skip-confirmation
 
     - name: Build project
-      working-directory: gitlab-project/GameTracker
-      run: ng deploy --base-href https://d4purebacon.github.io/GameTracker-Wizard/
-
-    - name: Move dist folder to root
-      run: |
-        if [ -d "gitlab-project/GameTracker/dist" ]; then
-          mv gitlab-project/GameTracker/dist/* ./docs
-          rm -rf gitlab-project
-        else
-          echo "No dist folder found, skipping file move."
-        fi
+      working-directory: ./GameTracker
+      run: ng build --base-href https://d4purebacon.github.io/GameTracker-Wizard/
 
     - name: Deploy to GitHub Pages
       env:
