--- a/.github/workflows/gitlab_deploy.yml
+++ b/.github/workflows/gitlab_deploy.yml
@@ -33,7 +33,7 @@ jobs:
         git remote add origin https://oauth2:${{ secrets.GITLAB_SECRET }}@code.ovgu.de/seidl/se24-exercise09.git
         git fetch origin
         git checkout develop
-        mv ./gitlab-project ./
+        mv ./gitlab-project/* ./
         git init
 
     - name: Set up Node.js
