--- a/.github/workflows/gitlab_deploy.yml
+++ b/.github/workflows/gitlab_deploy.yml
@@ -48,13 +48,17 @@ jobs:
     - name: Build project
       working-directory: gitlab-project/GameTracker
       run: ng build --configuration production --base-href /GameTracker-Wizard/ --output-path docs
-
+      
     - name: Move dist folder to root
       run: |
         if [ -d "gitlab-project/GameTracker/docs" ]; then
-          ls
-          mv -f gitlab-project/GameTracker/docs/* /docs
-          cp docs/index.html docs/404.html
+          if [ ! -d "/docs" ]; then
+            echo "/docs does not exist. Creating it..."
+            mkdir -p /docs
+          fi
+          echo "Moving contents to /docs..."
+          mv -f gitlab-project/GameTracker/docs/* /docs/
+          cp /docs/index.html /docs/404.html
           rm -rf gitlab-project
         else
           echo "No dist folder found, skipping file move."
